Only generate import statements and instantiations for upstream federates